--- a/gv/templates/gv/cv4.html
+++ b/gv/templates/gv/cv4.html
@@ -402,8 +402,8 @@ class GenomeSlider {
         this.toRender = { 'pqarm': true,
                          'cytoband': true,
                          'gene': true,
-                         'census': false,
-                         'variation': false};
+                         'census': true,
+                         'variation': true};
                          
        // loadCytoBandData();
         
